// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration: subscription list when a repository and an account has been deleted 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 1 repository",
      "text": "<https://github.com/atom/atom|atom/atom>",
      "title": "Subscribed to the following repositories",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscription list when a repository and an account has been deleted 2`] = `
Set {
  "pending-command#13345224609.738474920.8088930838d88f008e0",
}
`;

exports[`Integration: subscription list when a repository and an account has been deleted 3`] = `
Map {
  "pending-command#13345224609.738474920.8088930838d88f008e0" => Object {
    "channel_id": "C2147483705",
    "channel_name": "test",
    "command": "/github",
    "enterprise_id": "E0001",
    "enterprise_name": "Globular%20Construct%20Inc",
    "response_url": "https://hooks.slack.com/commands/1234/5678",
    "team_domain": "example",
    "team_id": "T0001",
    "text": "subscribe list",
    "token": "secret",
    "trigger_id": "13345224609.738474920.8088930838d88f008e0",
    "user_id": "U2147483697",
    "user_name": "Steve",
  },
}
`;

exports[`Integration: subscription list when some other error occurs 1`] = `
Set {
  "pending-command#13345224609.738474920.8088930838d88f008e0",
}
`;

exports[`Integration: subscription list when some other error occurs 2`] = `
Map {
  "pending-command#13345224609.738474920.8088930838d88f008e0" => Object {
    "channel_id": "C2147483705",
    "channel_name": "test",
    "command": "/github",
    "enterprise_id": "E0001",
    "enterprise_name": "Globular%20Construct%20Inc",
    "response_url": "https://hooks.slack.com/commands/1234/5678",
    "team_domain": "example",
    "team_id": "T0001",
    "text": "subscribe list",
    "token": "secret",
    "trigger_id": "13345224609.738474920.8088930838d88f008e0",
    "user_id": "U2147483697",
    "user_name": "Steve",
  },
}
`;

exports[`Integration: subscription list works for /github subscribe 1`] = `
Object {
  "attachments": Array [
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to notifications for a repository:
\`/github subscribe owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from notifications for a repository:
\`/github unsubscribe owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to notifications for all repositories in an organization:
\`/github subscribe owner\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from notifications for an organization:
\`/github unsubscribe owner\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to additional features and adjust the configuration of your subscription (<https://github.com/integrations/slack#configuration|Learn more>):
\`/github subscribe owner/respository reviews,comments\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubecribe from one or more individual subscription features:
\`/github unsubscribe owner/respository commits\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "List all active subscriptions in a channel:
\`/github subscribe list\`",
    },
    Object {
      "color": "",
      "footer": "<https://github.com/integrations/slack#readme|Learn More> — <https://github.com/contact?form%5Bsubject%5D=GitHub%2BSlack%20integration|Contact Support>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "text": "",
    },
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 2 repositories",
      "text": "<https://github.com/atom/atom|atom/atom>
<https://github.com/kubernetes/kubernetes|kubernetes/kubernetes>",
      "title": "Subscribed to the following repositories",
    },
  ],
  "response_type": "ephemeral",
  "text": ":wave: Need some help with \`/github\`?",
}
`;

exports[`Integration: subscription list works for /github subscribe 2`] = `
Set {
  "pending-command#13345224609.738474920.8088930838d88f008e0",
}
`;

exports[`Integration: subscription list works for /github subscribe 3`] = `
Map {
  "pending-command#13345224609.738474920.8088930838d88f008e0" => Object {
    "channel_id": "C2147483705",
    "channel_name": "test",
    "command": "/github",
    "enterprise_id": "E0001",
    "enterprise_name": "Globular%20Construct%20Inc",
    "response_url": "https://hooks.slack.com/commands/1234/5678",
    "team_domain": "example",
    "team_id": "T0001",
    "text": "subscribe",
    "token": "secret",
    "trigger_id": "13345224609.738474920.8088930838d88f008e0",
    "user_id": "U2147483697",
    "user_name": "Steve",
  },
}
`;

exports[`Integration: subscription list works for /github subscribe list 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 2 repositories",
      "text": "<https://github.com/atom/atom|atom/atom>
<https://github.com/kubernetes/kubernetes|kubernetes/kubernetes>",
      "title": "Subscribed to the following repositories",
    },
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 1 account",
      "text": "<https://github.com/Microsoft|Microsoft>",
      "title": "Subscribed to the following accounts",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscription list works for /github subscribe list 2`] = `
Set {
  "pending-command#13345224609.738474920.8088930838d88f008e0",
}
`;

exports[`Integration: subscription list works for /github subscribe list 3`] = `
Map {
  "pending-command#13345224609.738474920.8088930838d88f008e0" => Object {
    "channel_id": "C2147483705",
    "channel_name": "test",
    "command": "/github",
    "enterprise_id": "E0001",
    "enterprise_name": "Globular%20Construct%20Inc",
    "response_url": "https://hooks.slack.com/commands/1234/5678",
    "team_domain": "example",
    "team_id": "T0001",
    "text": "subscribe list",
    "token": "secret",
    "trigger_id": "13345224609.738474920.8088930838d88f008e0",
    "user_id": "U2147483697",
    "user_name": "Steve",
  },
}
`;
